# bhava

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  bench-history.csv  deny.toml
.claude/projects/-home-macro-Repos-bhava/memory/: project_varna_rename.md
.github/workflows/: ci.yml  release.yml
benches/: benchmarks.rs
docs/adr/: 001-fixed-array-over-hashmap.md  002-cosine-over-euclidean.md  003-cause-tagged-decay.md  004-occ-appraisal-model.md  005-pluggable-storage.md  006-sentiment-feature-activates-mood.md
docs/architecture/: math.md  overview.md
docs/development/: dependency-watch.md  roadmap.md  threat-model.md
docs/guides/: testing.md  usage.md
examples/: npc_personality.rs
scripts/: bench-history.sh
src/: active_hours.rs  actr.rs  aesthetic.rs  affective.rs  ai.rs  appraisal.rs  archetype.rs  atomic_time.rs  belief.rs  circadian.rs  compat.rs  curves.rs  display_rules.rs  energy.rs  environment.rs  eq.rs  error.rs  flow.rs  growth.rs  intuition.rs  lib.rs  macros.rs  microbiology.rs  microexpr.rs  monitor.rs  mood.rs  neuroscience.rs  physiology.rs  preference.rs  presets.rs  proximity.rs  psychology.rs  reasoning.rs  regulation.rs  relationship.rs  rhythm.rs  salience.rs  sentiment.rs  sociology.rs  spirit.rs  (+6 more)
src/mood/: baseline.rs  contagion.rs  damping.rs  history.rs  memory.rs  mod.rs  plutchik.rs  prompt.rs  tests.rs  triggers.rs  types.rs
src/traits/: descriptions.rs  kind.rs  mod.rs  ocean.rs  profile.rs
tests/: integration.rs
