[package]
name = "bhava"
version = "1.4.0"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0-only"
description = "Emotion and personality engine — trait spectrums, mood vectors, archetypes, behavioral mapping"
homepage = "https://github.com/MacCracken/bhava"
repository = "https://github.com/MacCracken/bhava"
readme = "README.md"
documentation = "https://docs.rs/bhava"
keywords = ["emotion", "personality", "ai", "npc", "agent"]
categories = ["game-engines", "simulation"]
exclude = [".claude/", ".github/", "bench-history.csv", "BENCHMARKS.md", "docs/", "scripts/"]

[features]
default = ["traits", "mood", "archetype", "sentiment"]
traits = []
mood = []
archetype = []
sentiment = ["mood"]
presets = ["traits", "archetype"]
ai = ["traits", "mood", "archetype", "sentiment", "dep:reqwest", "dep:tokio", "dep:serde_json"]
sqlite = ["traits", "mood", "archetype", "sentiment", "dep:rusqlite", "dep:serde_json"]
instinct = ["mood", "traits", "dep:jantu"]
psychology = ["mood", "traits", "dep:bodh"]
sociology = ["mood", "dep:sangha"]
physiology = ["mood", "dep:sharira"]
microbiology = ["mood", "dep:jivanu"]
tracing = ["dep:tracing"]
full = ["traits", "mood", "archetype", "sentiment", "presets", "ai", "sqlite", "instinct", "psychology", "sociology", "physiology", "microbiology", "tracing"]

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }

# Optional (ai feature)
reqwest = { version = "0.13", features = ["json"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
serde_json = { version = "1", optional = true }

# Optional (tracing feature)
tracing = { version = "0.1", optional = true }

# Optional (instinct feature — jantu creature behavior substrate)
jantu = { version = "1", optional = true, default-features = false }

# Optional (psychology feature — bodh psychology math)
bodh = { version = "1", optional = true, default-features = false }

# Optional (sociology feature — sangha sociology math)
sangha = { version = "1", optional = true, default-features = false }

# Optional (physiology feature — sharira body/biomechanics)
sharira = { version = "1", optional = true, default-features = false }

# Optional (microbiology feature — jivanu microbial/immune systems)
jivanu = { version = "1", optional = true, default-features = false }

# Optional (sqlite feature)
rusqlite = { version = "0.39", features = ["bundled"], optional = true }

[dev-dependencies]
serde_json = "1"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false
required-features = ["traits", "mood", "archetype", "sentiment", "presets"]

[[test]]
name = "integration"
required-features = ["traits", "mood", "archetype", "sentiment", "presets"]

[[example]]
name = "npc_personality"
required-features = ["traits", "mood", "archetype", "presets"]
